cabal-version: 3.8
name: adventofcode2022
version: 0.1.0.0
synopsis: My solutions for the Advent Of Code 2022 challenge written in Haskell
description: https://github.com/Scriptim/AdventOfCode2022
homepage: https://github.com/Scriptim/AdventOfCode2022
bug-reports: https://github.com/Scriptim/AdventOfCode2022/issues
license: MIT
license-file: LICENSE
author: Scriptim
maintainer: me@scriptim.dev
copyright: 2022 Scriptim
extra-source-files:
    README.md

library adventofcode-internal
    exposed-modules:
        AdventOfCode
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        , base
        , text
        , criterion
        , deepseq
        , directory
        , filepath
        , megaparsec
        , hspec

common aoc
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-import-lists -Wpartial-fields -Wredundant-constraints -Wunused-type-patterns -O2 -fwrite-ide-info -hiedir=.hie -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        , base
        , adventofcode2022:adventofcode-internal
        , text
        , extra
        , split
        , megaparsec
        , containers
        , vector
        , deepseq

common calorie-counting
    import: aoc
    hs-source-dirs: 01_calorie-counting
    other-modules: CalorieCounting
executable calorie-counting
    import: calorie-counting
    main-is: Main.hs
test-suite calorie-counting-test
    import: calorie-counting
    main-is: Spec.hs
benchmark calorie-counting-bench
    import: calorie-counting
    main-is: Bench.hs

common rock-paper-scissors
    import: aoc
    hs-source-dirs: 02_rock-paper-scissors
    other-modules: RockPaperScissors
executable rock-paper-scissors
    import: rock-paper-scissors
    main-is: Main.hs
test-suite rock-paper-scissors-test
    import: rock-paper-scissors
    main-is: Spec.hs
benchmark rock-paper-scissors-bench
    import: rock-paper-scissors
    main-is: Bench.hs

common rucksack-reorganization
    import: aoc
    hs-source-dirs: 03_rucksack-reorganization
    other-modules: RucksackReorganization
executable rucksack-reorganization
    import: rucksack-reorganization
    main-is: Main.hs
