cabal-version: 3.8
name: adventofcode2022
version: 0.1.0.0
synopsis: My solutions for the Advent Of Code 2022 challenge written in Haskell
description: https://github.com/Scriptim/AdventOfCode2022
homepage: https://github.com/Scriptim/AdventOfCode2022
bug-reports: https://github.com/Scriptim/AdventOfCode2022/issues
license: MIT
license-file: LICENSE
author: Scriptim
maintainer: me@scriptim.dev
copyright: 2022 Scriptim
extra-source-files:
    README.md

library adventofcode-internal
    exposed-modules:
        AdventOfCode
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        , base
        , text
        , criterion
        , deepseq
        , directory
        , filepath
        , megaparsec
        , hspec

common aoc
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-import-lists -Wpartial-fields -Wredundant-constraints -Wunused-type-patterns -O2 -fwrite-ide-info -hiedir=.hie -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        , base
        , adventofcode2022:adventofcode-internal
        , text
        , extra
        , split
        , megaparsec
        , containers
        , vector
        , matrix
        , deepseq

executable aoc-golfed
    import: aoc
    main-is: Golfed.hs
    hs-source-dirs: golfed

common calorie-counting
    import: aoc
    hs-source-dirs: 01_calorie-counting
    other-modules: CalorieCounting
executable calorie-counting
    import: calorie-counting
    main-is: Main.hs
test-suite calorie-counting-test
    import: calorie-counting
    main-is: Spec.hs
benchmark calorie-counting-bench
    import: calorie-counting
    main-is: Bench.hs

common rock-paper-scissors
    import: aoc
    hs-source-dirs: 02_rock-paper-scissors
    other-modules: RockPaperScissors
executable rock-paper-scissors
    import: rock-paper-scissors
    main-is: Main.hs
test-suite rock-paper-scissors-test
    import: rock-paper-scissors
    main-is: Spec.hs
benchmark rock-paper-scissors-bench
    import: rock-paper-scissors
    main-is: Bench.hs

common rucksack-reorganization
    import: aoc
    hs-source-dirs: 03_rucksack-reorganization
    other-modules: RucksackReorganization
executable rucksack-reorganization
    import: rucksack-reorganization
    main-is: Main.hs
test-suite rucksack-reorganization-test
    import: rucksack-reorganization
    main-is: Spec.hs
benchmark rucksack-reorganization-bench
    import: rucksack-reorganization
    main-is: Bench.hs

common camp-cleanup
    import: aoc
    hs-source-dirs: 04_camp-cleanup
    other-modules: CampCleanup
executable camp-cleanup
    import: camp-cleanup
    main-is: Main.hs
test-suite camp-cleanup-test
    import: camp-cleanup
    main-is: Spec.hs
benchmark camp-cleanup-bench
    import: camp-cleanup
    main-is: Bench.hs

common supply-stacks
    import: aoc
    hs-source-dirs: 05_supply-stacks
    other-modules: SupplyStacks
executable supply-stacks
    import: supply-stacks
    main-is: Main.hs
test-suite supply-stacks-test
    import: supply-stacks
    main-is: Spec.hs
benchmark supply-stacks-bench
    import: supply-stacks
    main-is: Bench.hs

common tuning-trouble
    import: aoc
    hs-source-dirs: 06_tuning-trouble
    other-modules: TuningTrouble
executable tuning-trouble
    import: tuning-trouble
    main-is: Main.hs
test-suite tuning-trouble-test
    import: tuning-trouble
    main-is: Spec.hs
benchmark tuning-trouble-bench
    import: tuning-trouble
    main-is: Bench.hs

common no-space-left-on-device
    import: aoc
    hs-source-dirs: 07_no-space-left-on-device
    other-modules: NoSpaceLeftOnDevice
executable no-space-left-on-device
    import: no-space-left-on-device
    main-is: Main.hs
test-suite no-space-left-on-device-test
    import: no-space-left-on-device
    main-is: Spec.hs
benchmark no-space-left-on-device-bench
    import: no-space-left-on-device
    main-is: Bench.hs

common treetop-tree-house
    import: aoc
    hs-source-dirs: 08_treetop-tree-house
    other-modules: TreetopTreeHouse
executable treetop-tree-house
    import: treetop-tree-house
    main-is: Main.hs
test-suite treetop-tree-house-test
    import: treetop-tree-house
    main-is: Spec.hs
benchmark treetop-tree-house-bench
    import: treetop-tree-house
    main-is: Bench.hs

common rope-bridge
    import: aoc
    hs-source-dirs: 09_rope-bridge
    other-modules: RopeBridge
executable rope-bridge
    import: rope-bridge
    main-is: Main.hs
test-suite rope-bridge-test
    import: rope-bridge
    main-is: Spec.hs
benchmark rope-bridge-bench
    import: rope-bridge
    main-is: Bench.hs
