cabal-version: 3.8
name: adventofcode2022
version: 0.1.0.0
synopsis: My solutions for the Advent Of Code 2022 challenge written in Haskell
description: https://github.com/Scriptim/AdventOfCode2022
homepage: https://github.com/Scriptim/AdventOfCode2022
bug-reports: https://github.com/Scriptim/AdventOfCode2022/issues
license: MIT
license-file: LICENSE
author: Scriptim
maintainer: me@scriptim.dev
copyright: 2022 Scriptim
extra-source-files:
    README.md

library adventofcode-internal
    exposed-modules:
        AdventOfCode
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        , base
        , text
        , criterion
        , deepseq
        , directory
        , filepath
        , megaparsec
        , hspec

common aoc
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-import-lists -Wpartial-fields -Wredundant-constraints -Wunused-type-patterns -O2 -fwrite-ide-info -hiedir=.hie -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        , base
        , adventofcode2022:adventofcode-internal
        , text
        , extra
        , split
        , megaparsec
        , containers
        , vector
        , matrix
        , deepseq

executable aoc-golfed
    import: aoc
    main-is: Golfed.hs
    hs-source-dirs: golfed

common calorie-counting
    import: aoc
    hs-source-dirs: 01_calorie-counting
    other-modules: CalorieCounting
executable calorie-counting
    import: calorie-counting
    main-is: Main.hs
test-suite calorie-counting-test
    import: calorie-counting
    main-is: Spec.hs
benchmark calorie-counting-bench
    import: calorie-counting
    main-is: Bench.hs

common rock-paper-scissors
    import: aoc
    hs-source-dirs: 02_rock-paper-scissors
    other-modules: RockPaperScissors
executable rock-paper-scissors
    import: rock-paper-scissors
    main-is: Main.hs
test-suite rock-paper-scissors-test
    import: rock-paper-scissors
    main-is: Spec.hs
benchmark rock-paper-scissors-bench
    import: rock-paper-scissors
    main-is: Bench.hs

common rucksack-reorganization
    import: aoc
    hs-source-dirs: 03_rucksack-reorganization
    other-modules: RucksackReorganization
executable rucksack-reorganization
    import: rucksack-reorganization
    main-is: Main.hs
test-suite rucksack-reorganization-test
    import: rucksack-reorganization
    main-is: Spec.hs
benchmark rucksack-reorganization-bench
    import: rucksack-reorganization
    main-is: Bench.hs

common camp-cleanup
    import: aoc
    hs-source-dirs: 04_camp-cleanup
    other-modules: CampCleanup
executable camp-cleanup
    import: camp-cleanup
    main-is: Main.hs
test-suite camp-cleanup-test
    import: camp-cleanup
    main-is: Spec.hs
benchmark camp-cleanup-bench
    import: camp-cleanup
    main-is: Bench.hs

common supply-stacks
    import: aoc
    hs-source-dirs: 05_supply-stacks
    other-modules: SupplyStacks
executable supply-stacks
    import: supply-stacks
    main-is: Main.hs
test-suite supply-stacks-test
    import: supply-stacks
    main-is: Spec.hs
benchmark supply-stacks-bench
    import: supply-stacks
    main-is: Bench.hs

common tuning-trouble
    import: aoc
    hs-source-dirs: 06_tuning-trouble
    other-modules: TuningTrouble
executable tuning-trouble
    import: tuning-trouble
    main-is: Main.hs
test-suite tuning-trouble-test
    import: tuning-trouble
    main-is: Spec.hs
benchmark tuning-trouble-bench
    import: tuning-trouble
    main-is: Bench.hs

common no-space-left-on-device
    import: aoc
    hs-source-dirs: 07_no-space-left-on-device
    other-modules: NoSpaceLeftOnDevice
executable no-space-left-on-device
    import: no-space-left-on-device
    main-is: Main.hs
test-suite no-space-left-on-device-test
    import: no-space-left-on-device
    main-is: Spec.hs
benchmark no-space-left-on-device-bench
    import: no-space-left-on-device
    main-is: Bench.hs

common treetop-tree-house
    import: aoc
    hs-source-dirs: 08_treetop-tree-house
    other-modules: TreetopTreeHouse
executable treetop-tree-house
    import: treetop-tree-house
    main-is: Main.hs
test-suite treetop-tree-house-test
    import: treetop-tree-house
    main-is: Spec.hs
benchmark treetop-tree-house-bench
    import: treetop-tree-house
    main-is: Bench.hs

common rope-bridge
    import: aoc
    hs-source-dirs: 09_rope-bridge
    other-modules: RopeBridge
executable rope-bridge
    import: rope-bridge
    main-is: Main.hs
test-suite rope-bridge-test
    import: rope-bridge
    main-is: Spec.hs
benchmark rope-bridge-bench
    import: rope-bridge
    main-is: Bench.hs

common cathode-ray-tube
    import: aoc
    hs-source-dirs: 10_cathode-ray-tube
    other-modules: CathodeRayTube
executable cathode-ray-tube
    import: cathode-ray-tube
    main-is: Main.hs
test-suite cathode-ray-tube-test
    import: cathode-ray-tube
    main-is: Spec.hs
benchmark cathode-ray-tube-bench
    import: cathode-ray-tube
    main-is: Bench.hs

common monkey-in-the-middle
    import: aoc
    hs-source-dirs: 11_monkey-in-the-middle
    other-modules: MonkeyInTheMiddle
executable monkey-in-the-middle
    import: monkey-in-the-middle
    main-is: Main.hs
test-suite monkey-in-the-middle-test
    import: monkey-in-the-middle
    main-is: Spec.hs
benchmark monkey-in-the-middle-bench
    import: monkey-in-the-middle
    main-is: Bench.hs

common hill-climbing-algorithm
    import: aoc
    hs-source-dirs: 12_hill-climbing-algorithm
    other-modules: HillClimbingAlgorithm
executable hill-climbing-algorithm
    import: hill-climbing-algorithm
    main-is: Main.hs
test-suite hill-climbing-algorithm-test
    import: hill-climbing-algorithm
    main-is: Spec.hs
benchmark hill-climbing-algorithm-bench
    import: hill-climbing-algorithm
    main-is: Bench.hs

common distress-signal
    import: aoc
    hs-source-dirs: 13_distress-signal
    other-modules: DistressSignal
executable distress-signal
    import: distress-signal
    main-is: Main.hs
test-suite distress-signal-test
    import: distress-signal
    main-is: Spec.hs
benchmark distress-signal-bench
    import: distress-signal
    main-is: Bench.hs

common regolith-reservoir
    import: aoc
    hs-source-dirs: 14_regolith-reservoir
    other-modules: RegolithReservoir
executable regolith-reservoir
    import: regolith-reservoir
    main-is: Main.hs
test-suite regolith-reservoir-test
    import: regolith-reservoir
    main-is: Spec.hs
benchmark regolith-reservoir-bench
    import: regolith-reservoir
    main-is: Bench.hs

common beacon-exclusion-zone
    import: aoc
    hs-source-dirs: 15_beacon-exclusion-zone
    other-modules: BeaconExclusionZone
executable beacon-exclusion-zone
    import: beacon-exclusion-zone
    main-is: Main.hs
test-suite beacon-exclusion-zone-test
    import: beacon-exclusion-zone
    main-is: Spec.hs
benchmark beacon-exclusion-zone-bench
    import: beacon-exclusion-zone
    main-is: Bench.hs

common pyroclastic-flow
    import: aoc
    hs-source-dirs: 17_pyroclastic-flow
    other-modules: PyroclasticFlow
executable pyroclastic-flow
    import: pyroclastic-flow
    main-is: Main.hs
test-suite pyroclastic-flow-test
    import: pyroclastic-flow
    main-is: Spec.hs
benchmark pyroclastic-flow-bench
    import: pyroclastic-flow
    main-is: Bench.hs

common boiling-boulders
    import: aoc
    hs-source-dirs: 18_boiling-boulders
    other-modules: BoilingBoulders
executable boiling-boulders
    import: boiling-boulders
    main-is: Main.hs
test-suite boiling-boulders-test
    import: boiling-boulders
    main-is: Spec.hs
benchmark boiling-boulders-bench
    import: boiling-boulders
    main-is: Bench.hs

common grove-positioning-system
    import: aoc
    hs-source-dirs: 20_grove-positioning-system
    other-modules: GrovePositioningSystem
executable grove-positioning-system
    import: grove-positioning-system
    main-is: Main.hs
test-suite grove-positioning-system-test
    import: grove-positioning-system
    main-is: Spec.hs
benchmark grove-positioning-system-bench
    import: grove-positioning-system
    main-is: Bench.hs

common monkey-math
    import: aoc
    hs-source-dirs: 21_monkey-math
    other-modules: MonkeyMath
executable monkey-math
    import: monkey-math
    main-is: Main.hs
test-suite monkey-math-test
    import: monkey-math
    main-is: Spec.hs
benchmark monkey-math-bench
    import: monkey-math
    main-is: Bench.hs

common monkey-map
    import: aoc
    hs-source-dirs: 22_monkey-map
    other-modules: MonkeyMap
executable monkey-map
    import: monkey-map
    main-is: Main.hs
test-suite monkey-map-test
    import: monkey-map
    main-is: Spec.hs
benchmark monkey-map-bench
    import: monkey-map
    main-is: Bench.hs

common unstable-diffusion
    import: aoc
    hs-source-dirs: 23_unstable-diffusion
    other-modules: UnstableDiffusion
executable unstable-diffusion
    import: unstable-diffusion
    main-is: Main.hs
test-suite unstable-diffusion-test
    import: unstable-diffusion
    main-is: Spec.hs
benchmark unstable-diffusion-bench
    import: unstable-diffusion
    main-is: Bench.hs

common blizzard-basin
    import: aoc
    hs-source-dirs: 24_blizzard-basin
    other-modules: BlizzardBasin
executable blizzard-basin
    import: blizzard-basin
    main-is: Main.hs
test-suite blizzard-basin-test
    import: blizzard-basin
    main-is: Spec.hs
benchmark blizzard-basin-bench
    import: blizzard-basin
    main-is: Bench.hs

common full-of-hot-air
    import: aoc
    hs-source-dirs: 25_full-of-hot-air
    other-modules: FullOfHotAir
executable full-of-hot-air
    import: full-of-hot-air
    main-is: Main.hs
